# python_dem

./: automate.py  particle_mesh_contact.py  particle_wall_contact.py
1_test_elastic_normal_impact_of_two_identical_spheres/: elastic_normal_impact_of_two_identical_spheres_analytical_fn_vs_overlap.csv  two_spheres_normal.py
2_elastic_normal_impact_of_sphere_with_plane/: elastic_normal_impact_of_sphere_with_plane_analytical_fn_vs_overlap.csv  sphere_plane_normal_impact.py
3_test_normal_contact_with_different_restitution_coefficients/: normal_cor.py
4_oblique_impact_of_sphere_with_plane_constant_resultant_velocity_different_incident_angles/: oblique_impact.py  sphere_plane_oblique_impact_dem_chung.csv  sphere_plane_oblique_impact_experimental.csv
5_oblique_impact_of_sphere_with_plane_constant_normal_velocity_different_tangential_velocities/: constant_normal_different_tangential_impact.py  dem_steel_chung.csv  fem_wu_2003.csv
6_normal_impact_of_sphere_with_plane_constant_normal_velocity_different_angular_velocities/: constant_normal_different_angular_impact.py  dem_al_alloy_chung.csv
7_spheres_constant_normal_varying_angular_velocities/: two_spheres_varying_ang_vel.py
dem_mesh_interaction/: CMakeLists.txt  README.md  example_dem.cpp  example_dem_triangle_contact.cpp
peridynamics/: bar_under_displacement_bc_1d.py  bar_under_tension_1d.py  bar_under_tension_matrix_formulation_pd_1d.py
rigid_body_python/: Dzhanibekov_effect_rb_3d_final.py  blender_animation.py
sphere_mesh_interaction/: sphere_triangle_mesh_interaction.py
(+6 files in other folders)
